Added more swager doc with response types, fixed validation error issue
